# thesis

./: .gitignore  README.md  main.py  pyproject.toml
lib/: utils.py
lib/nn/: modules.py
