[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["alanaudi <alanaudi.tw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
