[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["alanaudi <alanaudi.tw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pandas = "^1.0.1"
tabulate = "^0.8.6"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
